fix a few container and alignment issues

--- a/etherex/frontend/app/css/styles.css
+++ b/etherex/frontend/app/css/styles.css
@@ -6,9 +6,6 @@
  * of the MIT license.  See the LICENSE file for details.
  */
 
-#subnav {
-  margin-bottom: 21px;
-}
 
 .ellipsis {
   overflow: hidden;
